--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "noflo": "~0.7.9"
+    "noflo": "0.x >= 0.5"
   },
   "devDependencies": {
     "grunt": "~1.0.1",
