Update license info

--- a/package.json
+++ b/package.json
@@ -9,14 +9,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/forresto/noflo-clmtrackr.git"
+    "url": "git://github.com/noflo/noflo-clmtrackr.git"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "undefined/blob/master/LICENSE-MIT"
-    }
-  ],
+  "license": "MIT",
   "scripts": {
     "test": "grunt test"
   },
@@ -35,5 +30,7 @@
     "grunt-noflo-manifest": "~0.1.11",
     "grunt-noflo-browser": "^1.1.1"
   },
-  "keywords": []
+  "keywords": [
+    "noflo"
+  ]
 }
