--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "noflo": "1.0.0"
+    "noflo": "^1.0.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
